--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "core-js": "^3.6.5",
     "vue": "^2.6.12",
+    "vue-currency-symbol": "^1.0.2",
     "vue-material": "^1.0.0-beta-15",
     "vue-router": "^3.4.3",
     "vuex": "^3.5.1"
